fix gap in right

--- a/style.css
+++ b/style.css
@@ -155,6 +155,7 @@
 .left-right .right{
     display: flex;
     flex-direction: column;
+    gap: 20px;
 }
 
 
@@ -221,6 +222,7 @@
 .left-right .right .part-3 h2{
     font-size: 30px;
     color: var(--black);
+    
 }
 
 .right .part-3 .care-btn{
@@ -231,7 +233,7 @@
     border: var(--border);
     padding: 10px 15px;
     border-radius: 5%;
-    background: var(--bg);
+    background: var(--white);
 }
 
 
